Fixed others methods