@@ -2,7 +2,6 @@ package practice;
 
 import java.util.List;
 import java.util.NoSuchElementException;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 import java.util.stream.Stream;
 import model.Candidate;
@@ -52,7 +51,7 @@ public class StreamPractice {
         return peopleList.stream()
                 .filter(p -> p.getSex() == Person.Sex.MAN
                         && (p.getAge() >= fromAge && p.getAge() <= toAge))
-                .collect(Collectors.toList());
+                .toList();
     }
     /**
      * Given a List of `Person` instances (having `name`, `age` and `sex` fields),
@@ -85,7 +84,7 @@ public class StreamPractice {
                 .filter(f -> f.getSex() == Person.Sex.WOMAN && f.getAge() >= femaleAge)
                 .flatMap(p -> p.getCats().stream())
                 .map(Cat::getName)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
@@ -105,6 +104,6 @@ public class StreamPractice {
                 .filter(new CandidateValidator())
                 .map(Candidate::getName)
                 .sorted()
-                .collect(Collectors.toList());
+                .toList();
     }
 }
